@@ -4,6 +4,10 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / runtime requires]
  - MooseX::Params::Validate
 
+ [Added / test requires]
+ - Capture::Tiny
+ - File::Which
+
 1.000000 2015-07-30T16:49:16Z
  [Added / configure recommends]
  - ExtUtils::MakeMaker 7.00
